# flowmind

./: .env.example  .gitignore  AGENTS.md  README.md  ignore  main.py  pyproject.toml
api/: AGENTS.md  __init__.py  models.py  routes.py
atoms/: AGENTS.md  __init__.py  common.json  globalx.json
atoms/common/: __init__.py  file.py
atoms/globalx/: __init__.py  permission.py  space.py  transfer.py
core/: AGENTS.md  __init__.py  atoms_loader.py  executor.py  plan.dsl.yaml  plan_validation.md  plan_validator.py  planner.py  provider.py
tests/: conftest.py  test_api.py  test_atoms_loader.py  test_executor.py  test_plan_validator.py  test_planner.py
web/: AGENTS.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/api/: planClient.ts
web/src/store/: chatStore.ts  planStore.ts
web/src/types/: chat.ts  plan.ts
web/src/views/Canvas/: DynamicCanvas.css  DynamicCanvas.tsx
web/src/views/ChatPanel/: ChatInterface.css  ChatInterface.tsx
web/src/views/Layout/: ThreeColumnLayout.css  ThreeColumnLayout.tsx
web/src/views/Navigation/: SessionList.css  SessionList.tsx
