[project]
name = "flowmind"
version = "0.1.0"
description = "AI-driven dynamic business flow generation platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "socksio>=1.0.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]
