[project]
name = "flowmind"
version = "0.1.0"
description = "AI-driven dynamic business flow generation platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.128.0",
    "httpx[socks]>=0.28.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
